# solarium-ghosts

./: .gitignore  CMakeLists.txt  README.md
ghost-writer/: run-show.py
ghost-writer/PCA9635/: __init__.py  constants.py  device.py
ghost-writer/controller/: __init__.py  controller.py  i2c.py  ray.py
ghost-writer/driver/: __init__.py  blue.py  blue_base.py  i2c.py  light_base.py  ray.py  solarium.py
ghost-writer/generator/: base.py  test.py
layout/: copper_bottom.gbr  copper_top.gbr  drills.xln  gerber_job.gbrjob  ghost.brd  ghost.pro  ghost.sch  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_bottom.gbr  solderpaste_top.gbr
src/: Makefile  PCA9635.c  PCA9635.h  beam.c  beam.h  device.h  main.c  main.h  ray.c  ray.h  serial.c  serial.h
src-cpp/: PCA9635.cpp  PCA9635.h  beam.cpp  beam.h  main.cpp  main.h  ray.cpp  ray.h
src/basic-device/: led.c  led.h  main.c
src/full-ray-beam/: Makefile  beam.h  main.c  ray.c  ray.h
src/i2c/: i2c_master.c
src/lib/: PCA9635.c  PCA9635.h  i2c_master.c  serial.h
src/static/: Makefile  led.c  led.h  main.h
